# automation-repo

./: .gitignore  Jenkinsfile  README.md  pyproject.toml
deployment/: docker-compose.yml
deployment/jenkins/: Dockerfile
deployment/nginx/: Dockerfile  default.conf
deployment/nginx/html/: index.html
notebook/: model.ipynb
src/mlflow_demo/: factory.py
src/mlflow_demo/main/: cross_val.py
src/mlflow_demo/utils/: model_selection.py
